--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,7 @@ permalink: pretty
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-include:
-  - .well-known/
+include: [".well-known/brave-rewards-verification.txt", ".well-known"]
 
 exclude:
   - package.json
