--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,12 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-bundle-{{ checksum "Gemfile" }}
+            - v1-bundle-{{ checksum "Gemfile.lock" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-bundle-
       - run: bundle install --path vendor/bundle
       - save_cache:
-          key: v1-bundle-{{ checksum "Gemfile" }}
+          key: v1-bundle-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
       - run: bundle exec jekyll build
